src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@shaders__compiled__sprite_batch.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/sprite_batch.json
---
{
  "sourceFileName": "sprite_batch.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "SpriteBatchParams",
        "fields": [
          {
            "kind": "pointer",
            "fieldName": "sprites",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "pointeeType": {
              "typeName": "Sprite",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "position",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "rotation",
                  "binding": {
                    "kind": "uniform",
                    "offset": 12,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "vector",
                  "fieldName": "scale",
                  "binding": {
                    "kind": "uniform",
                    "offset": 16,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "vector",
                  "fieldName": "padding",
                  "binding": {
                    "kind": "uniform",
                    "offset": 24,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "texU",
                  "binding": {
                    "kind": "uniform",
                    "offset": 32,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "scalar",
                  "fieldName": "texV",
                  "binding": {
                    "kind": "uniform",
                    "offset": 36,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "scalar",
                  "fieldName": "texW",
                  "binding": {
                    "kind": "uniform",
                    "offset": 40,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "scalar",
                  "fieldName": "texH",
                  "binding": {
                    "kind": "uniform",
                    "offset": 44,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "vector",
                  "fieldName": "color",
                  "binding": {
                    "kind": "uniform",
                    "offset": 48,
                    "size": 16
                  },
                  "elementCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            },
            "pointeeSize": 64
          },
          {
            "kind": "struct",
            "fieldName": "projection",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 64
            },
            "structType": {
              "typeName": "Projection",
              "fields": [
                {
                  "kind": "matrix",
                  "fieldName": "matrix",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 64
                  },
                  "rowCount": 4,
                  "columnCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "resource",
            "fieldName": "texture",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 1,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": [
      {
        "kind": "struct",
        "parameterName": "input",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 2
        },
        "typeName": "FragInput",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "texCoord",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "color",
            "binding": {
              "kind": "varyingInput",
              "index": 1,
              "count": 1
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "position",
            "semanticName": "SV_POSITION",
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          },
          {
            "binding": 1,
            "descriptorType": "combinedTextureSampler",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 80
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
